fix: update cx id and video card spacing

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
 }
 
 .video__content {
